# Space-Invaders-Emulator

./: .gitignore  .gitmodules  LICENSE  README.md
Space-Invaders-Emulator/: .gitignore  CMakeLists.txt  Makefile  README.md  minimal.html  package-lock.json
Space-Invaders-Emulator/include/backend/: bus.h  core.h  input.h  shift_register.h
Space-Invaders-Emulator/include/frontend/: render.h
Space-Invaders-Emulator/src/: main.c
Space-Invaders-Emulator/src/backend/: bus.c  core.c  input.c  shift_register.c
Space-Invaders-Emulator/src/frontend/: render.c
scripts/: build.sh  emscripten.sh  run.sh
space-invaders-emulator/: index.js  index.wasm  package-lock.json  package.json  tsconfig.json
space-invaders-emulator/wasm/include/: buffer.h  common.h  context.h  shader.h  texture.h  vertex.h
space-invaders-emulator/wasm/lib/i8080emu/: hello.js  hello.wasm
space-invaders-emulator/wasm/shaders/default/: frag.glsl  vert.glsl
space-invaders-emulator/wasm/src/: buffer.c  context.c  main.c  shader.c  texture.c  vertex.c
